<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mediatore.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.mediatore.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_appointment"
        android:name="com.example.mediatore.ui.appointment.AppointmentFragment"
        android:label="@string/menu_appointment"
        tools:layout="@layout/fragment_appointment" />

    <fragment
        android:id="@+id/nav_appointments_create"
        android:name="com.example.mediatore.ui.appointment_create.AppointmentCreateFragment"
        android:label="@string/menu_appointment"
        tools:layout="@layout/fragment_appointment_create"/>

    <fragment
        android:id="@+id/nav_dependents"
        android:name="com.example.mediatore.ui.dependents.DependentFragment"
        android:label="@string/menu_dependent"
        tools:layout="@layout/fragment_dependent" />

    <fragment
        android:id="@+id/nav_dependents_create"
        android:name="com.example.mediatore.ui.dependents.DependentCreateFragment"
        android:label="@string/menu_dependent"
        tools:layout="@layout/fragment_dependent_create"/>
</navigation>