<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/bk_main_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="272dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/ic_mediatore" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="30dp"
                android:textColor="#FFFF">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            >

            <EditText
                android:id="@+id/et_login"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:backgroundTint="#FFF"
                android:paddingLeft="20dp"

                android:textColor="#FFFF"
                android:textSize="25dp"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="30dp"
                android:textColor="#FFFF"
                >

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            >

            <EditText
                android:paddingLeft="20dp"
                android:id="@+id/et_password"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:textColor="#FFFF"
                android:textSize="25dp"
                android:backgroundTint="#FFF"

                android:inputType="textPassword"

                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            >
            <Button
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goCreateAccountActivity"
                android:text="@string/create_account"
                android:textColor="#FFFF"
                android:textSize="20sp"
                android:shadowColor="#797979"
                android:background="?android:attr/selectableItemBackground"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:onClick="login"
                android:text="@string/login"
                android:textColor="#FFFF"
                android:textSize="25sp"
                android:background="@drawable/bk_button_border"
                />
        </LinearLayout>

    </LinearLayout>


</ScrollView>